--- a/about.html
+++ b/about.html
@@ -18,25 +18,21 @@
                         <a href = "about.html">About</a>
                     </div>    
                 </div>
-
                 <div class="right-side">
                     <div class="brand">
                         <div>Sunil Kumar</div>
                     </div>
                 </div>    
-            
         </div>
 
         <div class="content-wrapper">
             <div class="two-column-wrapper">
                 <div class="profile-image-wrapper">
-                        <img src="./img/portfolioimage1.jpg">
+                    <img src="./img/portfolioimage1.jpg">
                 </div>
                 <div class="profile-content-wrapper">
                     <h1>Hi thanks for visiting</h1>
-
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularized in the 1960s with the release of Let reset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularized in the 1960s with the release of Let reset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like PageMaker including versions of Lorem Ipsum.</p>
                 </div>
             </div>
         </div>
